--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-360.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.33MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-281.9KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65095, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-315.7KB/s(Youtube:不良林), server: 116.129.254.177, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇺🇸 美国-2.24MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-358.2KB/s(Youtube:不良林), server: cn02.downloadmovie.cn, port: 65034, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn02.downloadmovie.cn}}
   - {name: 🇨🇳 中国-730.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.16MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-296.6KB/s(Youtube:不良林), server: 116.129.254.177, port: 65048, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-353.0KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-354.7KB/s(Youtube:不良林), server: 116.129.254.177, port: 65075, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-245.0KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-349.4KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-369.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-244.7KB/s(Youtube:不良林), server: 120.233.150.146, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-380.4KB/s(Youtube:不良林), server: 116.129.254.177, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-334.8KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-272.2KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-379.9KB/s(Youtube:不良林), server: 111.45.22.136, port: 65023, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-360.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-281.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-315.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-358.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-730.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-296.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-353.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-354.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-245.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-369.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-244.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-272.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-360.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-281.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-315.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-358.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-730.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-296.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-353.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-354.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-245.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-369.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-244.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-272.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-360.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-281.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-315.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-358.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-730.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-296.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-353.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-354.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-245.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-369.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-244.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-272.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-360.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-281.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-315.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-358.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-730.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-296.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-353.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-354.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-245.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-369.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-244.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-272.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-360.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-281.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-315.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-358.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-730.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-296.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-353.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-354.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-245.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-369.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-244.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-272.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-360.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-281.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-315.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-358.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-730.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-296.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-353.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-354.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-245.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-369.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-244.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-272.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-360.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-281.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-315.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-358.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-730.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-296.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-353.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-354.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-245.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-369.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-244.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-272.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
