--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-5.49MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.05MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-223.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-193.1KB/s(Youtube:不良林), server: 120.233.150.146, port: 65024, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇸🇬 新加坡-1.45MB/s(Youtube:不良林), server: trojan3.udpgw.com, port: 443, type: trojan, password: 8db1b560-019d-11ed-8bdf-1239d0255272, sni: trojan3.udpgw.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-379.9KB/s(Youtube:不良林), server: 111.45.22.136, port: 65023, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇬🇧 英国-355.3KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-546.7KB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇨🇳 中国-6.33MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇬🇧 英国-855.1KB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.78MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-224.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-899.2KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-2.52MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
+  - {name: 🇨🇳 中国-339.8KB/s(Youtube:不良林), server: 116.129.254.177, port: 65077, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-317.2KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65095, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇭🇰 香港-282.9KB/s(Youtube:不良林), server: 103.253.43.228, port: 38000, type: trojan, password: da8e0008-3c2b-4363-b582-0d9a981cebea, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-223.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-193.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-379.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-355.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-546.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.33MB/s(Youtube:不良林)
       - 🇬🇧 英国-855.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-224.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-899.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-339.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-282.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-5.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-223.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-193.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-379.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-355.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-546.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.33MB/s(Youtube:不良林)
       - 🇬🇧 英国-855.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-224.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-899.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-339.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-282.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-223.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-193.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-379.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-355.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-546.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.33MB/s(Youtube:不良林)
       - 🇬🇧 英国-855.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-224.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-899.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-339.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-282.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-282.9KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-5.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-223.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-193.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-379.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-355.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-546.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.33MB/s(Youtube:不良林)
       - 🇬🇧 英国-855.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-224.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-899.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-339.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-282.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-223.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-193.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-379.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-355.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-546.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.33MB/s(Youtube:不良林)
       - 🇬🇧 英国-855.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-224.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-899.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-339.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-282.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-223.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-193.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-379.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-355.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-546.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.33MB/s(Youtube:不良林)
       - 🇬🇧 英国-855.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-224.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-899.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-339.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-282.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-223.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-193.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-379.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-355.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-546.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.33MB/s(Youtube:不良林)
       - 🇬🇧 英国-855.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-224.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-899.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-339.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-282.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
