--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-207.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-338.4KB/s(Youtube:不良林), server: 111.45.22.136, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇨🇳 中国-6.33MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-213.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-315.7KB/s(Youtube:不良林), server: 116.129.254.177, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-339.8KB/s(Youtube:不良林), server: 116.129.254.177, port: 65077, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-317.2KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65095, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇭🇰 香港-282.9KB/s(Youtube:不良林), server: 103.253.43.228, port: 38000, type: trojan, password: da8e0008-3c2b-4363-b582-0d9a981cebea, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-612.1KB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
-  - {name: 🇨🇳 中国-1.01MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.18MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-224.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.42MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.28MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
+  - {name: 🇨🇳 中国-415.3KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-1.05MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-617.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-921.1KB/s(Youtube:不良林), server: 134.195.196.150, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇸🇬 新加坡-392.0KB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-207.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-338.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-213.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-315.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-339.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-282.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-612.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-224.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-415.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-617.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-921.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-392.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-207.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-338.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-213.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-315.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-339.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-282.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-612.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-224.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-415.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-617.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-921.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-392.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-207.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-338.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-213.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-315.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-339.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-282.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-612.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-224.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-415.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-617.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-921.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-392.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-282.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-612.1KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-207.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-338.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-213.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-315.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-339.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-282.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-612.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-224.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-415.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-617.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-921.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-392.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-207.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-338.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-213.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-315.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-339.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-282.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-612.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-224.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-415.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-617.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-921.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-392.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-207.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-338.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-213.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-315.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-339.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-282.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-612.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-224.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-415.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-617.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-921.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-392.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-207.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-338.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-213.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-315.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-339.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-282.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-612.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-224.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-415.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-617.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-921.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-392.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
